feat: added signin API endpoint
