# config/initializeRouter.go
@@ -2,6 +2,7 @@ package config
 
 import (
 	"github.com/Abiji-2020/NexOrb/pkg/health"
+	"github.com/Abiji-2020/NexOrb/pkg/signin"
 	"github.com/Abiji-2020/NexOrb/pkg/signup"
 	"github.com/gin-gonic/gin"
 )
@@ -13,6 +14,9 @@ func (c *AppConfig) InitializeRoutes() {
 		v1.GET("/health", health.CheckHealth)
 		v1.POST("/signup", func(context *gin.Context) {
 			signup.SignUp(context, c.Logger, c.Database)
+		})
+		v1.POST("/signin", func(context *gin.Context) {
+			signin.SignIn(context, c.Logger, c.Database)
 		})
 	}
 
