# docs/swagger.yaml
@@ -1,5 +1,55 @@
 basePath: /v1/api
 definitions:
+  signin.GeneralErrorResponse:
+    properties:
+      message:
+        type: string
+      status_code:
+        type: integer
+    type: object
+  signin.SignInInvalidPasswordResponse:
+    properties:
+      email:
+        type: string
+      message:
+        type: string
+    type: object
+  signin.SignInRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  signin.SignInResponse:
+    properties:
+      apikey:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      organization_id:
+        type: string
+      role:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  signin.UserNotFoundResponse:
+    properties:
+      message:
+        type: string
+    type: object
   signup.SignupRequest:
     properties:
       avatar_image:
@@ -78,6 +128,48 @@ paths:
       summary: Check health of the application
       tags:
       - health
+  /signin:
+    post:
+      consumes:
+      - application/json
+      description: Signs in a user
+      parameters:
+      - description: Signin Request Payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/signin.SignInRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User signed in successfully
+          schema:
+            $ref: '#/definitions/signin.SignInResponse'
+        "400":
+          description: Error message
+          schema:
+            $ref: '#/definitions/signin.GeneralErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/signin.GeneralErrorResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/signin.UserNotFoundResponse'
+        "422":
+          description: Invalid sign in request Password
+          schema:
+            $ref: '#/definitions/signin.SignInInvalidPasswordResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/signin.GeneralErrorResponse'
+      summary: Signs in a user
+      tags:
+      - signin
   /signup:
     post:
       consumes:
